--- a/说明.ipynb
+++ b/说明.ipynb
@@ -29,18 +29,23 @@
    "id": "8a97c0db17bd33d"
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# 运行方法：运行app.py初始化数据库和文件夹"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "d2da8e165e874a6d"
+  },
+  {
    "cell_type": "code",
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-05-15T07:14:04.259518Z",
-     "start_time": "2024-05-15T07:14:04.256467Z"
-    }
+    "collapsed": false
    },
-   "id": "87db460a80212908",
-   "execution_count": 1
+   "id": "5db2069d752039e2"
   }
  ],
  "metadata": {
